--- a/resource/log4j.properties
+++ b/resource/log4j.properties
@@ -1,7 +1,7 @@
 # Log4j configuration file.
 log4j.rootCategory=DEBUG,A4,stdout
  
-#
+#prueba comentario 
 # stdout is ConsoleAppender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
